[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-iata-dgr-air-cargo-mcp"
version = "1.0.0"
description = "IATA DGR air-cargo compliance — ICAO Annex 18, IATA DGR 66, lithium-battery PI 965-970, Shipper's Declaration §8, acceptance checklist §9, state + operator variations. For forwarders + EV-recall carriers shipping by air. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "iata-dgr", "icao", "air-cargo", "lithium-battery", "un3480", "un3481", "pi-965", "shippers-declaration", "dangerous-goods", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-iata-dgr-air-cargo-mcp"

[project.scripts]
meok-iata-dgr-air-cargo-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
